Final edits before submission

--- a/control/control.tex
+++ b/control/control.tex
@@ -32,7 +32,7 @@
             % \cmidrule(lr){1-2}
             % \textbf{Model type}     & \textbf{Algorithm}                    & \\
             \hline
-            White-box model         & \gls{RLS} mass estimator, and         & \gls{LQR} \\
+            White-box model         & \gls{RLS} mass estimator and         & \gls{LQR} \\
                                     & \gls{FFT} cable length estimator      & \\
             \hline
             Black-box model         & \gls{DMDc}                            & \gls{MPC} \\
