--- a/control/diagrams/pid_architecture.tex
+++ b/control/diagrams/pid_architecture.tex
@@ -78,7 +78,7 @@
       
       \end{tikzpicture}
       
-      \caption{Cascaded \gls{PID} control architecture of PX4 \cite{PX4userguide}}
+      \caption{Cascaded \gls{PID} control architecture of PX4 \cite{PX4userguide}.}
       \label{fig:pid_architecture}
 
     \end{figure}
