--- a/control/diagrams/velocity_controller.tex
+++ b/control/diagrams/velocity_controller.tex
@@ -88,7 +88,7 @@
   
   \end{tikzpicture}
 
-  \caption{Velocity controller diagram \cite{PX4userguide}}
+  \caption{Velocity controller diagram \cite{PX4userguide}.}
   \label{fig:velocity_controller}
 
 \end{figure}
