--- a/control/simulation_environment.tex
+++ b/control/simulation_environment.tex
@@ -1,8 +1,8 @@
-\FloatBarrier\section{Simulation Environment} \label{sec:simulation_environment}
+\FloatBarrier\section{Simulation environment} \label{sec:simulation_environment}
 
     \paragraph
     The controllers in this chapter are tested within a Simulink\texttrademark~simulation environment.
-    This is used rather than the \gls{SITL}/Gazebo simulation environment because it allows us to iterate designs faster.
+    This is used rather than the \gls{SITL}/Gazebo simulation environment because it allows one to iterate designs faster.
     Simulink\texttrademark~provides a graphical interface for control system design which is helpful for rapid development.
     In contrast, the \gls{SITL}/Gazebo simulation environment requires text-based control laws in C\texttt{++} and requires \gls{ROS} nodes as an interface an between the \gls{MPC} and PX4.
     This requires a lot more development time for control system design than the graphical tools in Simulink\texttrademark.
