--- a/exp_design/exp_design.tex
+++ b/exp_design/exp_design.tex
@@ -19,7 +19,7 @@
             \begin{figure}[ht]
                 \centering
                 \includegraphics[width=0.5\linewidth]{exp_design/fig/honeybee}
-                \caption{Honeybee multirotor equipped with a \gls{OBC} and payload angle sensor}
+                \caption{Honeybee multirotor equipped with a \gls{OBC} and payload angle sensor.}
                 \label{fig:honeybee}
             \end{figure}
 
@@ -69,7 +69,7 @@
             \begin{figure}[ht]
                 \centering
                 \includegraphics[width=0.3\linewidth]{exp_design/fig/pixhawk}
-                \caption{Photo of a Pixhawk 4 mini \gls{FC} \cite{PX4userguide}}
+                \caption{Photo of a Pixhawk 4 mini \gls{FC} \cite{PX4userguide}.}
                 \label{fig:pixhawk}
             \end{figure}
             
@@ -82,7 +82,7 @@
             \begin{figure}[ht]
                 \centering
                 \includegraphics[width=0.3\linewidth]{exp_design/fig/payload_state_sensor}
-                \caption{Payload angle sensor with linear potentiometers}
+                \caption{Payload angle sensor with linear potentiometers.}
                 \label{fig:payload_state_sensor}
             \end{figure}
 
@@ -103,7 +103,7 @@
             \begin{figure}[ht]
                 \centering
                 \includegraphics[width=0.3\linewidth]{exp_design/fig/jetson}
-                \caption{NVIDIA\textsuperscript{\textregistered} Jetson Nano\texttrademark~\cite{NVIDIA} used as a \gls{OBC}}
+                \caption{NVIDIA\textsuperscript{\textregistered} Jetson Nano\texttrademark~\cite{NVIDIA} used as a \gls{OBC}.}
                 \label{fig:jetson}
             \end{figure}
             
@@ -142,7 +142,7 @@
             \begin{figure}[ht]
                 \centering
                 \includegraphics[width=0.6\linewidth]{exp_design/fig/gazebo_honeybee}
-                \caption{Model of Honeybee in the Gazebo simulator}
+                \caption{Model of Honeybee in the Gazebo simulator.}
                 \label{fig:gazebo_honeybee}
             \end{figure}
 
@@ -173,7 +173,7 @@
             \begin{figure}[!htbp]
                 \centering
                 \includegraphics[width=1\linewidth]{exp_design/fig/MAVROS}
-                \caption{Communication between \gls{ROS}, flight-stack, simulator, and ground station~\cite{Grobler2020}}
+                \caption{Communication between \gls{ROS}, flight-stack, simulator, and ground station~\cite{Grobler2020}.}
                 \label{fig:MAVROS}
             \end{figure}
 
@@ -197,7 +197,7 @@
         \begin{figure}[ht]
             \centering
             \includegraphics[width=0.9\linewidth]{exp_design/fig/HITL}
-            \caption{Different software and hardware components of a \gls{HITL} simulation}
+            \caption{Different software and hardware components of a \gls{HITL} simulation.}
             \label{fig:HITL}
         \end{figure}
 
@@ -213,7 +213,7 @@
         \begin{figure}[!htb]
             \centering
             \includegraphics[width=0.7\linewidth]{honeybee_with_payload.jpg}
-            \caption{Practical flight with Honeybee and a suspended payload}
+            \caption{Practical flight with Honeybee and a suspended payload.}
             \label{fig:honeybee_with_payload}
         \end{figure}
 
