--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -8,5 +8,5 @@ I am ever so grateful for the following people who have had a great influence on
     \item Dr Willem Jordaan, for his encouragement, guidance, and great conversations.
     \item My family, Arno, Anr\'e, Est\`e and Retief Louw, for their steadfast love.
     \item Chelaine Maree, for her unwavering support and joyful companionship in a challenging year.
-    \item My colleagues in the ESL, for great times and jokes which made difficult times so much fun.
+    \item My colleagues in the ESL, for helping hands and great times of fun.
 \end{itemize}
