--- a/frontmatter/publication.tex
+++ b/frontmatter/publication.tex
@@ -7,4 +7,4 @@ Sections of this work form part of the following paper that was accepted for pub
 \paragraph
 J.M. Louw and H.W. Jordaan, 
 ``Data-Driven System Identification and Model Predictive Control of a Multirotor with an Unknown Suspended Payload," 
-in \emph{Control Conference Africa (CCA)}, IFAC, Dec 2021, Magaliesburg, South Africa.
+in \emph{Control Conference Africa (CCA)}, IFAC, 2021, Magaliesburg, South Africa.
