--- a/lit_study/lit_table.tex
+++ b/lit_study/lit_table.tex
@@ -9,7 +9,7 @@
         \scriptsize
         \renewcommand{\arraystretch}{1.4}
         \centering
-        \caption{Summary of literature considered regarding the swing damping control of multirotors with suspended payloads}
+        \caption{Summary of literature considered regarding the swing damping control of multirotors with suspended payloads.}
         \begin{tabularx}{\linewidth}{@{}lllllcccccc@{}}
             \toprule
             \textbf{Author}              & \textbf{Year}                   & \textbf{\begin{tabular}[c]{@{}l@{}}Proposed\\ controller\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Baseline\\ controller\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Plant\\ model\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Parameter\\ uncertainty\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Unknown\\ dynamics\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Different \\ payloads\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Practical\\ data\end{tabular}} & \textbf{\begin{tabular}[c]{@{}l@{}}Outdoor\\ experiments\end{tabular}} \\ 
@@ -45,7 +45,7 @@
     \end{table}
 
     \scriptsize
-    \emph{Refer to Page (\pageref{sec:abbrev}) for the abbreviations used in this table.}
+    \emph{Refer to page (\pageref{sec:abbrev}) for the abbreviations used in this table.}
 
 \end{landscape}
 
