--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -27,7 +27,7 @@ Finally, practical flight data will be used to verify the simulated mathematical
     \begin{figure}[htb]
         \centering
         \includegraphics[width=0.6\linewidth]{modelling/fig/coord_frames}
-        \caption{Inertial and body coordinate frames of a quadrotor \cite{Erasmus2020}}
+        \caption{Inertial and body coordinate frames of a quadrotor \cite{Erasmus2020}.}
         \label{fig:coord_frames}
     \end{figure}
 
@@ -69,7 +69,7 @@ Finally, practical flight data will be used to verify the simulated mathematical
             \def\svgwidth{\columnwidth}
             \scalebox{0.85}{\input{modelling/fig/Euler_rotations.pdf_tex}}
             \vspace{0.5cm}
-            \caption{Illustration of Euler angles \cite{Slabber2020}}
+            \caption{Illustration of Euler angles \cite{Slabber2020}.}
             \label{fig:Euler_rotations}
         \end{figure}
 
@@ -406,7 +406,7 @@ Finally, practical flight data will be used to verify the simulated mathematical
     \begin{figure}[h]
         \centering
         \includegraphics[width=0.6\linewidth]{modelling/fig/quad_with_payload.png}
-        \caption{Schematic of a multirotor with suspended payload \cite{Slabber2020}}
+        \caption{Schematic of a multirotor with suspended payload \cite{Slabber2020}.}
         \label{fig:quad_with_payload}
     \end{figure}
 
@@ -523,8 +523,8 @@ Finally, practical flight data will be used to verify the simulated mathematical
         It is assumed that the coefficient of friction is equal in each axis of rotation.
         Therefore, the friction moments opposing the $\theta$ and $\phi$ rotations are given by,
         \begin{align}
-            M_{\theta}^F  &= - c \dot{\theta} \\
-            M_{\phi}^F    &= - c \dot{\phi}
+            M_{\theta}^F  &= - c \dot{\theta} , \mbox{~~and~~} \\
+            M_{\phi}^F    &= - c \dot{\phi} ,
         \end{align}
         respectively, where $c$ is the rotational friction coefficient for $\theta$ and $\phi$ rotations.
         A vector, $\bm{Q}$, of non-conservative forces and moments corresponding to the system coordinates in $\bm{p}$ can now be defined as,
