--- a/system_id/havok.tex
+++ b/system_id/havok.tex
@@ -129,7 +129,7 @@
     \begin{figure}[htb]
         \includegraphics[scale = 0.55]{havok_decomposition.png}
         \centering
-        \caption{Illustration of the extraction of $\bm{A}_H$ and $\bm{B}_H$ from Equation~\ref{eq:v_ss_a}}
+        \caption{Illustration of the extraction of $\bm{A}_H$ and $\bm{B}_H$ from Equation~\ref{eq:v_ss_a}.}
         \label{fig:havok_decomposition}
     \end{figure}
     
@@ -149,7 +149,7 @@
     \begin{figure}[htb]
         \includegraphics[scale = 0.75]{havok_force_entries.png}
         \centering
-        \caption{Illustration of forcing the known values in \gls{HAVOKc} matrices}
+        \caption{Illustration of forcing the known values in \gls{HAVOKc} matrices.}
         \label{fig:havok_force_entries}
     \end{figure}
 
