--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -535,7 +535,7 @@
         \begin{figure}[htb]
             \centering
             \includegraphics[width=0.5\linewidth]{double_pend.png}            
-            \caption{Double pendulum model representing an elongated suspended payload}
+            \caption{Double pendulum model representing an elongated suspended payload.}
             \label{fig:double_pend}
         \end{figure}
         
