--- a/system_id/plant.tex
+++ b/system_id/plant.tex
@@ -39,7 +39,7 @@
     \begin{figure}[htb]
         \centering
         \includegraphics[width=0.45\linewidth]{floating_pend.png}            
-        \caption{Schematic of a floating pendulum model considered for a North velocity controller}
+        \caption{Schematic of a floating pendulum model considered for a North velocity controller.}
         \label{fig:floating_pend}
     \end{figure}
 
