--- a/system_id/plots/FFT_vel_step_subfigs.tex
+++ b/system_id/plots/FFT_vel_step_subfigs.tex
@@ -5,6 +5,6 @@
     \input{system_id/plots/vel_step_single_pend.tex} % subfigure
     \input{system_id/plots/FFT_vel_step.tex} % subfigure
     \caption{Data from a velocity step response used for cable length estimation 
-    ($l =$~\SI{1}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.).}
+    ($l =$~\SI{1}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}).}
     \label{fig:FFT_vel_step_subfigs}  
 \end{figure}
