--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -32,17 +32,17 @@
         \centering  
         \begin{subfigure}[t]{0.32\textwidth}
             \includegraphics[width=0.9\linewidth]{rigid.jpg}
-            \caption{Rigid connection \cite{Wolf2020}}
+            \caption{Rigid connection \cite{Wolf2020}.}
         \end{subfigure}
         \begin{subfigure}[t]{0.32\textwidth}
             \includegraphics[width=0.9\linewidth]{suspended.jpg}
-            \caption{Suspended cable \cite{Flirtey}}
+            \caption{Suspended cable \cite{Flirtey}.}
         \end{subfigure}
         \begin{subfigure}[t]{0.32\textwidth}
             \includegraphics[width=0.9\linewidth]{actuated_payload_blue_bg.jpg}
-            \caption{Robotic actuator \cite{Tardella2016}}
+            \caption{Robotic actuator \cite{Tardella2016}.}
         \end{subfigure}
-        \caption{Different multirotor-payload configurations}
+        \caption{Different multirotor-payload configurations.}
         \label{fig:rigid_suspended_actuated} 
     \end{figure}
 
@@ -83,7 +83,7 @@
         \begin{figure}[htb]
             \centering
             \includegraphics[width=0.45\linewidth]{real_suspended_payload_example.jpg}            
-            \caption{A practical suspended payload used for search and rescue missions \cite{CompareCommander2020}}
+            \caption{A practical suspended payload used for search and rescue missions \cite{CompareCommander2020}.}
             \label{fig:real_suspended_payload_example}
         \end{figure}
 
@@ -169,7 +169,7 @@
         \begin{figure}[htb]
             \centering
             \includegraphics[width=0.6\linewidth]{fran_control_architecture.pdf}            
-            \caption{Notch filter and LQR control architecture \cite{Slabber2020}}
+            \caption{Notch filter and LQR control architecture \cite{Slabber2020}.}
             \label{fig:fran_control_architecture}
         \end{figure}
 
@@ -259,7 +259,7 @@
         \begin{figure}[ht]
             \centering
             \includegraphics[width=0.6\linewidth]{lit_study/fig/motion_capture}
-            \caption{Optitrack motion capture system for multirotor experiments \cite{Ireland2014}}
+            \caption{Optitrack motion capture system for multirotor experiments \cite{Ireland2014}.}
             \label{fig:motion_capture}
         \end{figure}        
 
@@ -278,7 +278,7 @@
         \begin{figure}[ht]
             \centering
             \includegraphics[width=0.6\linewidth]{lit_study/fig/outdoor_setup.png}
-            \caption{Multirotor and suspended payload for outdoor experiments \cite{Wang2020}}
+            \caption{Multirotor and suspended payload for outdoor experiments \cite{Wang2020}.}
             \label{fig:outdoor_setup}
         \end{figure}  
         
@@ -315,8 +315,8 @@
     \begin{figure}[ht]
         \centering
         \includegraphics[width=0.8\linewidth]{lit_study/fig/BFBEL.png}
-        \caption{Controller structure proposed by \citet{Muthusamy2021}}
-        \label{fig:BFBEL}
+                    \caption{Controller structure proposed by \citet{Muthusamy2021}.}
+                    \label{fig:BFBEL}
     \end{figure} 
 
     \paragraph
@@ -342,7 +342,7 @@
     \paragraph
     System identification methods can determine a model of the unknown dynamics and a controller could be designed based on the identified plant model.
     This could provide improved control of the entire dynamical system.
-    Control architectures involving data-driven model identification and resultant model-based controller have been proposed for multirotors \cite{Tran2021, Wang2020}.
+    Control architectures involving data-driven model identification and resultant model-based controllers have been proposed for multirotors \cite{Tran2021, Wang2020}.
     However, we were not able to find similar studies in the literature that involves an unknown suspended payload.
     
     % \paragraph
