--- a/results/results.tex
+++ b/results/results.tex
@@ -124,7 +124,7 @@
             \begin{figure}[!htb]
                 \centering
                 \includegraphics[width=0.6\linewidth]{practical_double_pendulum_2.jpg}
-                \caption{Practical flight with a suspended elongated payload attached to Honeybee}
+                \caption{Practical flight with a suspended elongated payload attached to Honeybee.}
                 \label{fig:practical_double_pendulum}
             \end{figure}     
 
@@ -143,7 +143,7 @@
                 \input{results/plots/FFT_vel_step_double_pend.tex} % subfigure
                 \input{results/plots/FFT_double_pend_prac.tex} % subfigure
                 \caption{White-box model prediction for a North velocity step input for a dynamic payload
-                ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}) }
+                ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}).}
                 \label{fig:FFT_double_pend_prac_subfigs}  
             \end{figure}
 
@@ -349,7 +349,7 @@
                 \input{results/plots/training_data_vel_prac.tex} % subfigure
                 \input{results/plots/training_data_theta_prac.tex} % subfigure
                 \caption{Snapshot of training data with random velocity step inputs for the North and East axes
-                    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter})}
+                    ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}).}
                 \label{fig:XY_train_data_subfigs}  
             \end{figure}
 
@@ -373,7 +373,7 @@
                 \input{results/plots/prac_pediction_xy_theta_y.tex} % subfigure
                 \input{results/plots/prac_pediction_xy_vel_x.tex} % subfigure
                 \input{results/plots/prac_pediction_xy_vel_y.tex} % subfigure
-                \caption{Data-driven predictions of practical data for a model with both North and East axis dynamics}
+                \caption{Data-driven predictions of practical data for a model with both North and East axis dynamics.}
                 \label{fig:xy_predictions}  
             \end{figure}
 
