--- a/control/plots/mpc_theta_prediction_vs_actual.tex
+++ b/control/plots/mpc_theta_prediction_vs_actual.tex
@@ -39,6 +39,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Optimised prediction and actual payload angle response of the MCP with a dynamic payload.}
+    \caption{Optimised prediction and actual payload angle response of the MPC with a dynamic payload.}
     \label{fig:mpc_theta_prediction_vs_actual}
 \end{figure}
