--- a/control/plots/rootlocus_cl.tex
+++ b/control/plots/rootlocus_cl.tex
@@ -14,8 +14,8 @@
     \begin{tikzpicture}
 
         \begin{axis}[            
-          xlabel = Imaginary,
-          ylabel = Real,
+          xlabel = Real,
+          ylabel = Imaginary,
           % x unit = \si{\hertz},
           % y unit = \si{\second},
           xmin=-5, xmax=0.2,
