--- a/control/plots/rootlocus_open_loop.tex
+++ b/control/plots/rootlocus_open_loop.tex
@@ -2,8 +2,8 @@
     \centering
     \begin{tikzpicture}
         \begin{axis}[            
-            xlabel = Imaginary,
-            ylabel = Real,
+            xlabel = Real,
+            ylabel = Imaginary,
             % x unit = \si{\hertz},
             % y unit = \si{\second},
             xmin = 0.3,  xmax = 1.7,
