--- a/frontmatter/uittreksel.tex
+++ b/frontmatter/uittreksel.tex
@@ -13,7 +13,7 @@ Hierdie metode word in simulasies en met praktiese vlugdata gedemonstreer.
 Model Voorspellende Beheer (MVB) word toegepas vir swaaidempingsbeheer en word geverifieer met Hardeware-in-die-Lus (HIDL) simulasies.
 
 \paragraph
-'n Parameter-afskatter en Line\^ere Kwadratiese Gaussiese (LKG) word in die basislynargitektuur gebruik.
+'n Parameter-afskatter en Line\^ere Kwadratiese Gaussiese (LKG) word in die basislyn beheerargitektuur gebruik.
 Die LKG gebruik 'n voorafbepaalde model van die sisteem wat voltooi word met afskattings van die loonvragmassa en kabellengte.
 Die nuwe voorgestelde argitektuur gebruik Dinamiese Modus Ontbinding met beheer (DMOb) om 'n line\^ere toestand-ruimte model te bereken en die dinamika af te skat sonder 'n voorafbepaalde model.
 Die argitektuur is ook getoets met 'n Hankel Alternatiewe Siening van Koopman (HASK)-algoritme wat in hierdie werk uitgebrei is om beheer in te sluit.
