--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -189,7 +189,7 @@
         A non-linear model of the multirotor-payload system was linearised and discretised to apply a discrete, linear \gls{MPC} formulation.
         The physical parameters of the multirotor, cable, and payload were assumed to be exactly known and the controller was tested with only one payload.
         The controller received a position trajectory reference and determined force setpoints to control the vehicle.
-        Furthermore, constraints were applied to the heigh, attitude, and control inputs to ensure safe flight manoeuvres. 
+        Furthermore, constraints were applied to the height, attitude, and control inputs to ensure safe flight manoeuvres. 
         Simulation results showed a superior trajectory tracking performance with the \gls{MPC} compared to a baseline \gls{LQR} controller.
         The \gls{MPC} simulation results were also verified with experimental results in an indoor environment.
 
