--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -54,7 +54,7 @@
                 1\\
                 0 \\
                 - \frac{1}{l} \\
-            \end{bmatrix} .
+            \end{bmatrix}.
     \end{align}
 
     % matrix with linear air damping:
@@ -66,7 +66,7 @@
     % \end{bmatrix}, \mbox{ and} \\
 
     \paragraph
-    It is assumed that the coefficient of friction, $c$, does not change for different payloads, therefore this parameter can be determined experimentally and is before a flight.
+    It is assumed that the coefficient of friction, $c$, does not change for different payloads, therefore this parameter can be determined experimentally and is known before a flight.
     Furthermore, it is assumed that $m_Q$ is known.
     The payload parameters, $m_p$ and $l$, are unknown before a flight. 
     These parameters will be estimated in the sections below.    
@@ -99,7 +99,7 @@
     The cable length is estimated from the measurement of the natural frequency of the swinging payload.
     As described by \cite{Bisgaard2008}, the natural frequency is given by:
     \begin{equation} \label{eq:nat_freq}
-        \omega_n = \sqrt{ \frac{g}{l} \cdot \frac{m_Q + m_p}{m_Q}} .
+        \omega_n = \sqrt{ \frac{g}{l} \cdot \frac{m_Q + m_p}{m_Q}}.
     \end{equation}
     The cable length can be calculated from Equation~\ref{eq:nat_freq} if the other parameters are known.
     The natural frequency is measured by performing a \gls{FFT} on the payload swing angle response after a velocity step by the multirotor.
