--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -12,7 +12,7 @@ This method is demonstrated in simulation and with practical flight data.
 \gls{MPC} is applied for swing damping control and is verified with \gls{HITL} simulations.  
 
 \paragraph
-A parameter estimator and \gls{LQR} is used as a baseline architecture.
+A parameter estimator and \gls{LQR} is used as a baseline control architecture.
 The \gls{LQR} uses a predetermined model of the system, which is completed with estimates of the payload mass and cable length.
 The newly proposed architecture uses \gls{DMDc} to estimate a linear state-space model and approximate the dynamics without using a predetermined model.
 The architecture was also tested with a \gls{HAVOK} algorithm which was extended in this work to account for control.
@@ -24,7 +24,7 @@ Within simulations both the baseline and proposed architectures produced near sw
 Even with a dynamic payload producing irregular oscillations, both methods achieved stabilised control.
 Both architectures also showed effective disturbance rejection.
 Despite the baseline method using an accurate predetermined model, the proposed method produced equal performances without prior knowledge of the dynamics.
-The baseline performance degraded significantly with 'n changed multirotor mass because this parameter was not considered as an unknown.
+The baseline performance degraded significantly with a changed multirotor mass because this parameter was not considered as an unknown.
 In contrast, the proposed method consistently produced good performances. 
 
 \paragraph
