--- a/results/results.tex
+++ b/results/results.tex
@@ -167,7 +167,7 @@
                 \centering  
                 \input{results/plots/prediction_double_pend_white_prac.tex} % subfigure
                 \input{results/plots/prediction_double_pend_white_prac_bad.tex} % subfigure
-                \caption{Data from a velocity step response with a dynamic payload 
+                \caption{Data predictions using slightly different initial conditions for a velocity step response with a dynamic payload 
                 ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}).}
                 \label{fig:predictions_double_pend_prac_subfigs}  
             \end{figure}
@@ -292,7 +292,7 @@
             \paragraph
             Recall from Section~\ref{sec:dmdc} that \gls{DMDc} produces a discrete, state-space model in the form:
             \begin{equation}
-                \bm{x}_{k+1} = \bm{A}_{dmd} \bm{x}_k + \bm{A}_d \bm{d}_k + \bm{B}_{dmd} \bm{u}_k .
+                \bm{x}_{k+1} = \bm{A}_{dmd} \bm{x}_k + \bm{A}_d \bm{d}_k + \bm{B}_{dmd} \bm{u}_k.
             \end{equation}
             The state prediction starts at the initial condition, $\bm{x}_0$ and $\bm{d}_0$,
             and predicts the state vector for each successive time-step, $\bm{x}_{k+1}$, 
@@ -334,13 +334,13 @@
             \begin{equation}
                 \bm{x} = \begin{bmatrix}
                     V_N & V_E & \theta_N & \theta_E 
-                \end{bmatrix}^T ,
+                \end{bmatrix}^T,
             \end{equation}
             and the corresponding input vector is,
             \begin{equation}
                 \bm{u} = \begin{bmatrix}
                     A_{N_{sp}} & A_{E_{sp}}
-                \end{bmatrix} .
+                \end{bmatrix}.
             \end{equation}
             
             \begin{figure}
