--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -32,7 +32,7 @@
         \paragraph
         \gls{DMDc} and \gls{HAVOKc} produce very similar prediction errors for a range of different simulation conditions.
         \gls{HAVOKc} generally has slightly lower errors, but this may have a negligible effect on a controller which is based on such a model.
-        \gls{DMDc} is selected as the preferred method because it is has a lower computationally complexity.
+        \gls{DMDc} is selected as the preferred method because it has a lower computationally complexity.
         
         \paragraph
         The data-driven methods were shown to produce accurate prediction models of the multirotor-payload dynamics 
